--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #007f3f;
+      color: black;
+      background-color: white;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -26,10 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
+    <h1>Canalizacion finalizada!</h1>
   </div>
 </body>
 </html>
